# mcp-security-lab

./: .gitignore  README.md  mcp_attack_catalog.html  mcp_security_threat_taxonomy_layered.html
mcp_attack_lab/: README.md  SCENARIO_SCHEMA.md  pyproject.toml
mcp_attack_lab/mcp_profiles/: everything-local.yml  fetch-local.yml  filesystem-github-analogue.yml  filesystem-local.yml
mcp_attack_lab/model_configs/: dashscope-qwen-plus.yml  dashscope-qwen2.5-3b-instruct.yml  huggingface-qwen2.5-0.5b-instruct.yml  ollama-gemma3-1b.yml  ollama-gemma3-4b.yml  ollama-qwen2.5-7b.yml  openai-gpt-5-mini.yml  openai-gpt-5-nano.yml
mcp_attack_lab/repro/: README.md  github_testbed_manifest.example.json
mcp_attack_lab/research/: README.md
mcp_attack_lab/research/case-studies/: github-mcp-toxic-flow.md
mcp_attack_lab/research/checklists/: github-mcp-run-checklist.md  vscode-black-box-run-checklist.md
mcp_attack_lab/research/roadmaps/: github-mcp-production-proof-plan.md  github-mcp-toxic-flow-roadmap.md
mcp_attack_lab/scenarios/: 001-indirect-prompt-injection.md  001-indirect-prompt-injection.yml  001a-indirect-prompt-injection-defense-off.yml  001t-indirect-prompt-injection-tool-bridge.yml  002-tool-output-injection.yml  003-policy-bypass.yml  gh-toxic-flow-001-local-analogue.yml  scenario-template.yml
mcp_attack_lab/scripts/: README.md  bootstrap_github_testbed.py  create_minimal_scn004_repro.py  evaluate_result.py  mcp_filesystem_bridge.mjs  mcp_github_bridge.mjs  reset_github_issue.py  run_official_github_probe.py  run_scenario.py
scripts/: start_github_mcp_server.ps1
(+50 files in other folders)
